@@ -1,3 +1,12 @@
+2008-10-28  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* emacs.c (daemon_pipe): Make non-static.
+	(IS_DAEMON): Move definition ...
+	* lisp.h (IS_DAEMON): ... here.
+	(daemon_pipe): Declare.
+	(is_daemon): Remove.
+	* dispnew.c (init_display): Use IS_DAEMON.
+
 2008-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* xdisp.c (pos_visible_p, redisplay_internal, message3_nolog)
